index.html updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Wello World !</h3>
+    <h3>Olegi and Emzari will be successfull !</h3>
 </body>
 </html>
